# education_api

./: .gitignore  README.md  pyproject.toml
app/: settings.py  urls.py
catalog/: admin.py  models.py  serializers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
lessons/: admin.py  models.py  serializers.py  urls.py  views.py
lessons/migrations/: 0001_initial.py  0002_alter_lessoninfo_unique_together.py
market/: admin.py  models.py  serializer.py  urls.py  views.py
market/migrations/: 0001_initial.py  0002_lesson.py  0003_userlessonrelation.py  0004_lesson_user_action.py
market/tests/: test_api.py
stats/: serializer.py  urls.py  views.py
